# AdventOfCode

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  aoc.ifc  aoc_compile_options.mod  cxx_modules_rules.cmake  presets.clang.json  presets.gcc.json  presets.msvc.json  tips.txt  vc140.idb
2015/: AdventOfCode.sln
2015/day01/: day01.vcxproj  input.h
2015/day02/: day02.vcxproj  day2.cpp  day2.vcxproj.filters
2015/day03/: day03.vcxproj  day3.cpp  day3.vcxproj.filters
2015/day04/: day04.vcxproj  day4.cpp  day4.vcxproj.filters
2015/day05/: day05.vcxproj
2015/day06/: day06.vcxproj  day6.cpp  day6.vcxproj.filters
2015/day07/: day07.vcxproj  day7.cpp  input.h
2015/day08/: day08.vcxproj  day8.cpp  day8.vcxproj.filters  input.h
2015/day09/: day09.vcxproj  day9.cpp  day9.vcxproj.filters  input.h
2015/day1/: day1.cpp  day1.vcxproj  day1.vcxproj.filters
2015/day10/: day10.cpp  day10.vcxproj  day10.vcxproj.filters
2015/day11/: day11.cpp  day11.vcxproj  day11.vcxproj.filters
2015/day12/: day12.cpp  day12.vcxproj  day12.vcxproj.filters  input.h
2015/day13/: day13.cpp  day13.vcxproj  day13.vcxproj.filters  input.h
2015/day14/: day14.cpp  day14.vcxproj  day14.vcxproj.filters
2015/day15/: day15.cpp  day15.vcxproj  day15.vcxproj.filters
2015/day16/: day16.cpp  day16.vcxproj  day16.vcxproj.filters
2015/day17/: day17.cpp  day17.vcxproj  day17.vcxproj.filters
2015/day18/: day18.cpp  day18.vcxproj  day18.vcxproj.filters  input.h
2015/day19/: day19.cpp  day19.vcxproj  day19.vcxproj.filters
2015/day2/: day2.vcxproj  input.h
2015/day20/: day20.cpp  day20.vcxproj  day20.vcxproj.filters
2015/day21/: day21.cpp  day21.vcxproj  day21.vcxproj.filters
2015/day22/: day22.cpp  day22.vcxproj  day22.vcxproj.filters
2015/day23/: day23.cpp  day23.vcxproj  day23.vcxproj.filters
2015/day24/: day24.cpp  day24.vcxproj  day24.vcxproj.filters
2015/day25/: day25.cpp  day25.vcxproj  day25.vcxproj.filters
2015/day3/: day3.vcxproj  input.h
2015/day4/: day4.vcxproj
2015/day5/: day5.cpp  day5.vcxproj  day5.vcxproj.filters  input.h
2015/day6/: day6.vcxproj  input.h
2015/day7/: day7.cpp  day7.vcxproj  day7.vcxproj.filters  input.h
2015/day8/: day8.cpp  day8.vcxproj
2015/day9/: day9.vcxproj
2020/: AoC2020.sln
2020/day_04/: day_04.cpp  day_04.vcxproj  day_04.vcxproj.filters
2021/: CMakeLists.txt
2021/day1/: CMakeLists.txt  day1.cpp
2021/day10/: CMakeLists.txt  day10.cpp  input.txt
2021/day11/: CMakeLists.txt  day11.cpp  input.txt
2021/day12/: CMakeLists.txt  day12.cpp  input.txt
2021/day13/: CMakeLists.txt  day13.cpp  input.txt
2021/day14/: CMakeLists.txt  day14.cpp  input.txt
2021/day15/: CMakeLists.txt  day15.cpp  input.txt
2021/day16/: CMakeLists.txt  day16.cpp  input.txt
2021/day2/: CMakeLists.txt  day2.cpp  input.txt
2021/day20/: CMakeLists.txt  day20.cpp  input.txt
2021/day21/: CMakeLists.txt  day21.cpp
2021/day3/: CMakeLists.txt  day3.cpp  input.txt
2021/day4/: CMakeLists.txt  boards.txt  day4.cpp  draw_numbers.txt
2021/day5/: CMakeLists.txt  day5.cpp  input.txt
2021/day6/: CMakeLists.txt  day6.cpp
2021/day7/: CMakeLists.txt  day7.cpp
2021/day8/: CMakeLists.txt  day8.cpp  input.txt
2021/day9/: CMakeLists.txt  day9.cpp  input.txt
2022/: CMakeLists.txt
2022/common_unittests/: main.cpp  (+1 more)
2022/day11/: CMakeLists.txt  input.txt  main.cpp
2022/day13/: CMakeLists.txt  input.txt  main.cpp
2022/day17/: CMakeLists.txt  main.cpp
2022/day8/: CMakeLists.txt  input.txt  main.cpp
2022/empty_starter/: CMakeLists.txt  main.cpp
2023/: CMakeLists.txt  main.cpp
2023/day01/: main.cpp
2023/day02/: main.cpp
2023/day03/: main.cpp
2023/day04/: main.cpp
2023/day05/: main.cpp
2023/day06/: main.cpp
2023/day07/: impl.cpp  main.cpp  sample_input.txt
2023/day08/: impl.cpp  main.cpp  sample_input.txt
2023/day09/: impl.cpp  main.cpp  sample_input.txt
2023/day10/: CMakeLists.txt  impl.cpp  main.cpp  sample_input.txt
2023/day11/: impl.cpp  main.cpp  sample_input.txt
2023/day12/: impl.cpp  main.cpp  sample_input.txt
2023/day13/: sample_input.txt
2023/day14/: CMakeLists.txt
2023/day15/: impl.cpp  main.cpp  sample_input.txt
2023/day16/: impl.cpp  sample_input.txt
2023/day17/: impl.cpp  sample_input.txt
2023/day18/: impl.cpp  main.cpp  sample_input.txt
2023/day19/: impl.cpp  sample_input.txt
2023/day20/: impl.cpp  sample_input.txt
2023/day21/: impl.cpp
2023/day22/: CMakeLists.txt  input.txt
2023/day24/: sample_input.txt
2023/day25/: main.cpp
2024/: CMakeLists.txt  day.h  impl.cpp
2024/day01/: sample_input.txt  solution.cpp
2024/day02/: sample_input.txt  solution.cpp
2024/day03/: sample_input.txt  solution.cpp
2024/day04/: sample_input.txt  solution.cpp
2024/day05/: sample_input.txt  solution.cpp
2024/day06/: sample_input.txt  solution.cpp
2024/day07/: sample_input.txt  solution.cpp
2024/day08/: sample_input.txt  solution.cpp
2024/day09/: sample_input.txt  solution.cpp
2024/day10/: sample_input.txt  solution.cpp
2024/day11/: sample_input.txt  solution.cpp
2024/day12/: solution.cpp
2024/day13/: sample_input.txt  solution.cpp
2024/day14/: sample_input.txt  solution.cpp
2024/day15/: sample_input.txt  solution.cpp
2024/day16/: sample_input.txt  solution.cpp
2024/day17/: sample_input.txt  solution.cpp
2024/day19/: sample_input.txt  solution.cpp
2024/day20/: sample_input.txt  solution.cpp
2024/day21/: solution.cpp
2024/template/: sample_input.txt  solution.cpp
2025/: CMakeLists.txt  impl.h  tests_and_benchmarks.h
aoc/: aoc-GRID.ixx  aoc-array.ixx  aoc-async.ixx  aoc-bits.ixx  aoc-cursor.ixx  aoc-direction.ixx  aoc-graph.ixx  aoc-grid.ixx  aoc-math.ixx  aoc-matrix.ixx  aoc-numeric.ixx  aoc-pos2d.ixx  aoc-range.ixx  aoc-ranges.ixx  aoc-shan.ixx  aoc-string.ixx  aoc-tlssplit.ixx  aoc-views.ixx  aoc-visited.ixx  aoc.ixx  cascsa.std.ixx  catch2_macro_guards.h  min_spanning_tree.h  std.ixx
common/: bits.h  common.ixx  graph.h  matrix.h  min_spanning_tree.h  pos2d.h  range.h
common_unittests/: CMakeLists.txt  matrix.cpp
(+58 files in other folders)
