cmake_minimum_required (VERSION 3.24)

project (AoC_2023 CXX)

macro(add_day)
	add_executable (${ARGV0} "main.cpp")
	add_test(${ARGV0} ${ARGV0})

	target_compile_options(${ARGV0} PRIVATE /EHsc /nologo /experimental:module /reference std=CMakeFiles\\AdventOfCode.dir\\std.ifc)
	target_compile_definitions(${ARGV0} PRIVATE AOC_IMPL_H="./${ARGV0}/impl.cpp")
	target_link_libraries(${ARGV0} PRIVATE AdventOfCode Catch2::Catch2WithMain)
endmacro()


add_subdirectory ("day01")
add_subdirectory ("day02")
add_subdirectory ("day03")
add_subdirectory ("day04")
add_subdirectory ("day05")
add_subdirectory ("day06")
add_subdirectory ("day07")
add_day ("day08")
add_day ("day09")
add_day ("day10")
add_day ("day11")
add_day ("day12")
add_subdirectory ("day13")
add_subdirectory ("day14")
add_subdirectory ("day15")
add_subdirectory ("day16")
add_subdirectory ("day17")
add_subdirectory ("day18")
add_subdirectory ("day19")
add_subdirectory ("day20")
add_subdirectory ("day21")
add_subdirectory ("day22")
add_subdirectory ("day23")
add_subdirectory ("day24")
add_subdirectory ("day25")
